# stormscope

./: .gitignore  .mcpbignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  release.yml
src/stormscope/: __init__.py  __main__.py  base_client.py  cache.py  codsus.py  config.py  geo.py  iem.py  nws.py  openmeteo.py  server.py  spc.py  tempest.py  tools.py  units.py  vorticity.py  wpc.py
src/stormscope/data/: us_states.json
tests/: conftest.py  test_cache.py  test_codsus.py  test_config.py  test_geo.py  test_iem.py  test_nws.py  test_openmeteo.py  test_server.py  test_spc.py  test_tempest.py  test_tools.py  test_units.py  test_vorticity.py  test_wpc.py
