[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stormscope"
version = "1.4.1"
description = "MCP server for real-time US weather data via NWS API, NOAA SPC, and IEM radar"
readme = "README.md"
license = "ISC"
requires-python = ">=3.11"
authors = [
    { name = "Jade Michael Thornton" },
]
keywords = ["mcp", "weather", "nws", "noaa", "spc", "radar"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "shapely>=2.0",
]

[project.scripts]
stormscope = "stormscope.server:main"

[project.urls]
Homepage = "https://github.com/thornjad/stormscope"
Repository = "https://github.com/thornjad/stormscope"

[tool.hatch.build.targets.wheel]
packages = ["src/stormscope"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_empty = true
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    # Don't complain about MCP configuration itself
    "mcp = FastMCP",
]
omit = [
     "__init__.py",
     "__main__.py",
]
